--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,40 @@
 # Dependencies
 node_modules/
+package-lock.json
 
 # Environment variables
 .env
+.env.local
+.env.production
 
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# OS
+# Backups (keep structure but ignore files)
+backups/*
+!backups/.gitkeep
+
+# OS files
 .DS_Store
 Thumbs.db
+desktop.ini
 
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
+*~
 
 # Build
 dist/
 build/
+
+# Temporary files
+tmp/
+temp/
+*.tmp
